# pywiegand

./: .gitignore  LICENSE  README.md  build.py  pyproject.toml  pywiegand.cpp  setup.py
pywiegand/: __init__.py
pywiegand/extension/: pywiegand_adapter.cpp  pywiegand_adapter.h
src/: reader.py
tests/: test_decoding.py
