[tool.poetry]
name = "pywiegand"
version = "0.4.4"
description = "Wiegand protocol on Raspberry PI"
authors = ["Gábor Kovács <gkovacs81@gmail.com>"]
homepage = "https://github.com/ArPIHomeSecurity/pywiegand"
repository = "https://github.com/ArPIHomeSecurity/pywiegand"
license = "MIT"
readme = "README.md"
include = ["LICENSE"]

[tool.poetry.build]
script = "build.py"
generate-setup-file = false

[tool.poetry.dependencies]
python = "^3.7"
wiringPi = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.4.1", "setuptools"]
build-backend = "poetry.core.masonry.api"
